--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -71,7 +71,7 @@ form .field-group {
 }
 
 form input, form select {
-    background-color: #f0f0f5;
+    background-color: var(--background-color);
     border: 0;
     padding: 16px 24px;
     font-size: 16px;
@@ -114,6 +114,9 @@ form button {
 }
 form button:hover {
     background-color: var(--primary-color-strong);
+}
+form button:disabled {
+    opacity: 0.6;
 }
 
 .items-grid {
