--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
     --title-color: #322153;
     --primary-color: #34cb79;
     --primary-color-strong: #2fb86e;
+    --background-color: #f0f0f5;
 }
 
 * {
@@ -11,7 +12,7 @@
 }
 
 body {
-    background: #f0f0f5;
+    background: var(--background-color);
     font-family: Roboto, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
