--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,14 @@
+body {
+  background: white;
+}
 body:after {
     content: "";
-    position: fixed;
-    top: 260px;
+    position: absolute;
+    top: 0;
     right: 0;
     left: 0;
-    bottom: 0;
-    background-color: white;
+    height: 16rem;
+    background-color: var(--background-color);
 
     z-index: -1;
 }
