--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -88,3 +88,16 @@
 #modal form button:hover {
     background-color: var(--primary-color-strong);
 }
+
+#modal.point .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#modal.point h1 {
+  color: white;
+  margin-top: 32px;
+}
+
+
