--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,49 +1,46 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    <title>Resultado da pesquisa</title>
+  <title>Resultado da pesquisa</title>
 {% endblock title %}
 
 {% block styles %}
-    <link rel="stylesheet" href="./styles/search-results.css">
+  <link rel="stylesheet" href="./styles/search-results.css">
 {% endblock styles %}
 
 {% set pageId = "page-search-results" %}
 {% block content %}
-    {% include "partials/page-header.html" %}
-    <main>
-        <h4>
-            <strong>2 pontos</strong>
-            Encontrados
-        </h4>
+  {% include "partials/page-header.html" %}
+  <main>
+    {% if total > 0 %}
+      <h4>
+        <strong>{{ places.length }}
+          pontos</strong>
+        Encontrados
+      </h4>
 
-        <div class="cards">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1503596476-1c12a8ba09a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Colectoria">
-                <h1>Colectoria</h1>
-                <h3>Resíduos Eletrônicos, lampadas</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br>
-                    Guilherme Gamballa, Jardim América
-                    <br>
-                    Número 260
+      <div class="cards">
+        {% for place in places %}
+          <div class="card">
+            <img src="{{ place.image }}" alt="{{ place.name}}">
+            <h1>{{ place.name }}</h1>
+            <h3>{{ place.items }}</h3>
+            <p>
+              {{ place.city }},
+              {{ place.state }}
+              <br>
+              {{ place.address }}
+              <br>
+              {{ place.number }}
+            </p>
+          </div>
+        {% endfor %}
+      </div>
+      {% else%}
+      <h4>
+        <strong>Nenhum ponto de coleta encontrado</strong>
+      </h4>
+    {% endif %}
 
-                </p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80" alt="Colectoria">
-                <h1>Paperside</h1>
-                <h3>Papeis e Papelões</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br>
-                    Guilherme Gamballa, Jardim América
-                    <br>
-                    Número 260
-                </p>
-            </div>
-        </div>
-    </main>
+  </main>
 {% endblock content %}
-
